// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should convert value to api object 1`] = `
{
  "(ID: EF9tbsJj3CNZ) 🐶 Choose the dog ": "Choice 3",
  "(ID: MVlZfnmjZlye) 👋 Just choose one": "🍍 Pineapple",
  "(ID: NqCpSqCpteiO) You sig here": " (https://kyndform.com/sig.jpg)",
  "(ID: NteSqF9g5cOa6) Input table": "Ivan, 16
Jack Smith, 24",
  "(ID: Svky0NLxkN7u) 🎉 Single Choose with other": "Other answer",
  "(ID: X9F47wrnJImk) 👍 Do you agree with us ": "No",
  "(ID: bcFvi1syrp66) ☎️  Your MobilePhone ": "+12015551023",
  "(ID: g6Oayu81jkdqcte) Full name": "Ivan Woods",
  "(ID: qCpteNRi2SiO) 🈴️ Upload you avatar ": "avatar.jpg (https://kyndform.com/qCpteNRi2SiO_avatar.jpg)",
  "(ID: qFN5cteg6SOa) 🪐 Rate here ": 5,
  "(ID: u1NyLxkSvkN7) ✈ Multiple Choose with other": "Choice 2, Other answer",
  "(ID: vyLu2NkN70xkS) Group Multiple Choose ": "Group Choice 1, Group Choice 2",
  "(ID: yLxkSvkN7u2N) 🧱 Multiple Choose ": "Choice 2",
}
`;

exports[`should convert value to flat json 1`] = `
{
  "EF9tbsJj3CNZ": "Choice 3",
  "MVlZfnmjZlye": "🍍 Pineapple",
  "NqCpSqCpteiO": " (https://kyndform.com/sig.jpg)",
  "NteSqF9g5cOa6": "Ivan, 16
Jack Smith, 24",
  "Svky0NLxkN7u": "Other answer",
  "X9F47wrnJImk": "No",
  "bcFvi1syrp66": "+12015551023",
  "g6Oayu81jkdqcte": "Ivan Woods",
  "qCpteNRi2SiO": "avatar.jpg (https://kyndform.com/qCpteNRi2SiO_avatar.jpg)",
  "qFN5cteg6SOa": 5,
  "u1NyLxkSvkN7": "Choice 2, Other answer",
  "vyLu2NkN70xkS": "Group Choice 1, Group Choice 2",
  "yLxkSvkN7u2N": "Choice 2",
}
`;

exports[`should convert value to html 1`] = `
"<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width: 100%; border-collapse: collapse; border-spacing: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      Group Multiple Choose 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <div style="margin-top: 2px;"><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Group Choice 1</span><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Group Choice 2</span></div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      ☎️  Your MobilePhone 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <a href="tel:+12015551023" style="color: #2563eb; text-decoration: none; font-weight: 500;">+12015551023</a>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      🧱 Multiple Choose 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <div style="margin-top: 2px;"><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Choice 2</span></div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      👋 Just choose one
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <div style="margin-top: 2px;"><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">🍍 Pineapple</span></div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      👍 Do you agree with us 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <span style="display: inline-block; padding: 3px 10px; background-color: #fee2e2; color: #991b1b; border-radius: 9999px; font-size: 12px; font-weight: 600;">✗ No</span>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      🐶 Choose the dog 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <div style="margin-top: 2px;"><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Choice 3</span></div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      🈴️ Upload you avatar 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      
<div style="margin-top: 4px;">
  <div style="margin-bottom: 8px;">
    <a href="https://kyndform.com/qCpteNRi2SiO_avatar.jpg" target="_blank" style="display: inline-block; border: 1px solid #e2e8f0; border-radius: 8px; padding: 4px; background-color: #f8fafc; text-decoration: none;">
      <img src="https://kyndform.com/qCpteNRi2SiO_avatar.jpg" alt="avatar.jpg" style="max-width: 100%; max-height: 160px; border-radius: 6px; display: block;" />
    </a>
  </div>
  <a href="https://kyndform.com/qCpteNRi2SiO_avatar.jpg" target="_blank" style="display: inline-block; padding: 8px 16px; background-color: #0f172a; color: #ffffff; text-decoration: none; border-radius: 6px; font-size: 13px; font-weight: 500; letter-spacing: 0.2px;">
    📎 Download avatar.jpg &nbsp; &darr;
  </a>
</div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      You sig here
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      
<div style="margin-top: 4px;">
  <div style="margin-bottom: 8px;">
    <a href="https://kyndform.com/sig.jpg" target="_blank" style="display: inline-block; border: 1px solid #e2e8f0; border-radius: 8px; padding: 4px; background-color: #f8fafc; text-decoration: none;">
      <img src="https://kyndform.com/sig.jpg" alt="Download Attachment" style="max-width: 100%; max-height: 160px; border-radius: 6px; display: block;" />
    </a>
  </div>
  <a href="https://kyndform.com/sig.jpg" target="_blank" style="display: inline-block; padding: 8px 16px; background-color: #0f172a; color: #ffffff; text-decoration: none; border-radius: 6px; font-size: 13px; font-weight: 500; letter-spacing: 0.2px;">
    📎 Download Download Attachment &nbsp; &darr;
  </a>
</div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      🪐 Rate here 
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <span style="display: inline-block; padding: 4px 12px; background-color: #fef3c7; color: #92400e; border-radius: 6px; font-weight: 700; font-size: 13px;">★ 5</span>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      Full name
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <span style="font-weight: 500; color: #0f172a;">Ivan Woods</span>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      Input table
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <pre style="font-family: inherit; margin: 0; white-space: pre-wrap; font-size: 13px; color: #334155;">Ivan, 16
Jack Smith, 24</pre>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      ✈ Multiple Choose with other
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <div style="margin-top: 2px;"><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Choice 2</span><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Other answer</span></div>
    </div>
  </td>
</tr>
<tr>
  <td style="padding: 14px 0; border-bottom: 1px solid #f1f5f9;">
    <div style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: #64748b; margin-bottom: 5px;">
      🎉 Single Choose with other
    </div>
    <div style="font-size: 14px; color: #0f172a; line-height: 1.5;">
      <div style="margin-top: 2px;"><span style="display: inline-block; padding: 4px 10px; margin: 2px 6px 2px 0; background-color: #f1f5f9; color: #334155; border-radius: 9999px; font-size: 12px; font-weight: 500; border: 1px solid #e2e8f0;">Other answer</span></div>
    </div>
  </td>
</tr></table>"
`;

exports[`should convert value to json 1`] = `
{
  "EF9tbsJj3CNZ": "Choice 3",
  "MVlZfnmjZlye": "🍍 Pineapple",
  "NqCpSqCpteiO": {
    "filename": "",
    "url": "https://kyndform.com/sig.jpg",
  },
  "NteSqF9g5cOa6": [
    {
      "age": "16",
      "name": "Ivan",
    },
    {
      "age": "24",
      "name": "Jack Smith",
    },
  ],
  "Svky0NLxkN7u": "Other answer",
  "X9F47wrnJImk": "No",
  "bcFvi1syrp66": "+12015551023",
  "g6Oayu81jkdqcte": {
    "firstName": "Ivan",
    "lastName": "Woods",
  },
  "qCpteNRi2SiO": {
    "filename": "avatar.jpg",
    "url": "https://kyndform.com/qCpteNRi2SiO_avatar.jpg",
  },
  "qFN5cteg6SOa": 5,
  "u1NyLxkSvkN7": "Choice 2, Other answer",
  "vyLu2NkN70xkS": "Group Choice 1, Group Choice 2",
  "yLxkSvkN7u2N": "Choice 2",
}
`;

exports[`should convert value to text 1`] = `
"Group Multiple Choose 
Group Choice 1, Group Choice 2

☎️  Your MobilePhone 
+12015551023

🧱 Multiple Choose 
Choice 2

👋 Just choose one
🍍 Pineapple

👍 Do you agree with us 
No

🐶 Choose the dog 
Choice 3

🈴️ Upload you avatar 
avatar.jpg (https://kyndform.com/qCpteNRi2SiO_avatar.jpg)

You sig here
 (https://kyndform.com/sig.jpg)

🪐 Rate here 
5

Full name
Ivan Woods

Input table
Ivan, 16
Jack Smith, 24

✈ Multiple Choose with other
Choice 2, Other answer

🎉 Single Choose with other
Other answer"
`;
